# vasthost-os

./: .dockerignore  .env.example  .gitignore  .prettierignore  README.md  docker-compose.yml  gpu_names_cache.json  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_market_dist_dlperf.py  0003_auth_two_key_multimarket.py  0004_admin_must_change_password.py  0005_offer_host_and_indexes.py  0006_align_sim_fee_to_market_fee.py  0007_sim_host_current_price.py  0008_simulated_autopilot.py  0009_rental_aware_pricing.py  0010_defjob_backfill.py  0011_alerting_suite.py  0012_sim_host_delete_cascade.py
apps/api/app/: deps.py  main.py
apps/api/app/routes/: account.py  admin.py  alerting.py  auth.py  earnings.py  fleet.py  health.py  market.py  offers.py  pricing.py  provider_keys.py  simulator.py
apps/api/core/: config.py  crypto.py  security.py
apps/api/db/: session.py
apps/api/models/: __init__.py  _types.py  account.py  alerting.py  auth.py  earnings.py  fleet.py  keys.py  market.py  pricing.py  simulator.py
apps/api/schemas/: auth.py  models.py
apps/api/services/: alerting.py  auth.py  autopilot.py  calc.py  observer.py  pricing.py  provider_keys.py  seed.py  sync.py  vast_client.py
apps/api/worker/: celery_app.py  tasks.py
apps/web/: Dockerfile  middleware.ts  next.config.js  package.json  tailwind.config.ts
apps/web/app/: globals.css  (+3 more)
docs/: BUILD_SPEC.md  lan-access.md
infrastructure/nginx/: nginx.conf
(+48 files in other folders)
