[project]
name = "vasthost-api"
version = "0.1.0"
description = "VastHost OS — FastAPI backend + Celery workers"
requires-python = ">=3.12"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["E501"]
"__init__.py" = ["F401"]
